Fix modal on tablets

--- a/packages/lightwallet/src/app/app.scss
+++ b/packages/lightwallet/src/app/app.scss
@@ -498,6 +498,7 @@ ion-modal.merit-modal {
     min-width: 100%;
     max-width: 100%;
     top: initial;
+    left: 0;
     bottom: 0;
   }
 
